# nextid

./: Cargo.toml  README.md
lib/codec/: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
lib/codec/benches/: benches.rs
lib/codec/derive/: Cargo.toml
lib/codec/derive/src/: decode.rs  encode.rs  lib.rs  trait_bounds.rs  utils.rs
lib/codec/fuzzer/: Cargo.toml  README.md
lib/codec/fuzzer/src/: main.rs
lib/codec/src/: bit_vec.rs  codec.rs  compact.rs  depth_limit.rs  encode_append.rs  encode_like.rs  error.rs  generic_array.rs  joiner.rs
lib/codec/tests/: chain-error.rs  mod.rs  single_field_struct_encoding.rs  skip.rs  variant_number.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs  merkle.rs  sp_merkle.rs
pallets/register/: Cargo.toml
pallets/register/src/: lib.rs
runtime/: Cargo.toml
runtime/ocw-runtime/: Cargo.toml
runtime/ocw-runtime/src/: lib.rs
runtime/onchain-runtime/: Cargo.toml
runtime/onchain-runtime/src/: lib.rs
runtime/src/: lib.rs
