[package]
name = "pallet-ocw"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME example pallet for offchain worker"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, tag = "devhub/latest", git = 'https://github.com/paritytech/substrate.git' }
frame-system = { version = "4.0.0-dev", default-features = false, tag = "devhub/latest", git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "4.0.0-dev", default-features = false, tag = "devhub/latest", git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "4.0.0-dev", default-features = false, tag = "devhub/latest", git = 'https://github.com/paritytech/substrate.git' }
sp-keystore = { version = "0.10.0-dev", tag = "devhub/latest", git = 'https://github.com/paritytech/substrate.git', optional = true }
sp-runtime = { version = "4.0.0-dev", default-features = false, tag = "devhub/latest", git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "4.0.0-dev", default-features = false, tag = "devhub/latest", git = 'https://github.com/paritytech/substrate.git' }
serde = { version = '1.0.136', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.78', default-features = false, features = ['alloc'] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keystore",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
]
try-runtime = ["frame-support/try-runtime"]